crates/0_config/src/snapshots/sprefa_config__discover__tests__discover_flat_repo_only.snap
---
source: crates/0_config/src/3_discover.rs
expression: snapshot
---
- - myco
  - backend
  - main
- - myco
  - frontend
  - main
