crates/0_config/src/snapshots/sprefa_config__discover__tests__discover_org_branch_repo.snap
---
source: crates/0_config/src/3_discover.rs
expression: snapshot
---
- - acme
  - main
  - backend
- - acme
  - main
  - frontend
- - acme
  - release-v3
  - frontend
- - other-org
  - main
  - shared-lib
